objects/pse__Search_Resources_Personal__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Contains user/profile level settings for Search Resources</description>
    <fields>
        <fullName>pse__Default_Search_Logic_Additional_Fields__c</fullName>
        <defaultValue>&quot;AND&quot;</defaultValue>
        <description>The default search logic that is selected when searching for resources using the Additional Filter section of the Search Resources page. You can enter a value of OR or AND. The default value is AND.</description>
        <inlineHelpText>The default search logic that is selected when searching for resources using the Additional Filter section of the Search Resources page. You can enter a value of OR or AND. The default value is AND.</inlineHelpText>
        <label>Default Search Logic Additional Fields</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Default_Search_Logic_For_Certification__c</fullName>
        <defaultValue>&quot;AND&quot;</defaultValue>
        <description>The default search logic that is selected when searching for resources using the Qualifications section of  Search Resources. You can enter a value of OR or AND. The default value is AND.</description>
        <inlineHelpText>The default search logic that is selected when searching for resources using the Qualifications section of  Search Resources. You can enter a value of OR or AND. The default value is AND.</inlineHelpText>
        <label>Default Search Logic For Certification</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Default_Search_Logic_For_Skill__c</fullName>
        <defaultValue>&quot;AND&quot;</defaultValue>
        <description>The default search logic that is selected when searching for resources using the Competencies section of Search Resources. You can enter a value of OR or AND. The default value is AND.</description>
        <inlineHelpText>The default search logic that is selected when searching for resources using the Competencies section of Search Resources. You can enter a value of OR or AND. The default value is AND.</inlineHelpText>
        <label>Default Search Logic For Skill</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Distance_Unit__c</fullName>
        <defaultValue>&quot;km&quot;</defaultValue>
        <description>The distance unit to be shown in Resource Search. Enter km for kilometers. Enter mile for miles. The default value is km.</description>
        <inlineHelpText>The distance unit to be shown in Resource Search. Enter km for kilometers. Enter mile for miles. The default value is km.</inlineHelpText>
        <label>Distance Unit</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Fields_to_List_in_Map_Push_Pin__c</fullName>
        <description>Comma separated list of fields to display on each push pin of the map that appears when you click Show Results on Map.</description>
        <inlineHelpText>Comma separated list of fields to display on each push pin of the map that appears when you click Show Results on Map.</inlineHelpText>
        <label>Fields to List in Map Push Pin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Max_Columns_Allowed_in_Result_Section__c</fullName>
        <description>Defines the maximum number of fields from the SearchResourcesResultFields field set to be displayed in a single row within a search result on the Search Resources page. The default value of 6 is used if the value is null or zero.</description>
        <inlineHelpText>Defines the maximum number of fields from the SearchResourcesResultFields field set to be displayed in a single row within a search result on the Search Resources page. The default value of 6 is used if the value is null or zero.</inlineHelpText>
        <label>Max Columns Allowed in Result Section</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Maximum_Resources__c</fullName>
        <description>Maximum number of resources to be displayed. Set this value no higher than 500.</description>
        <inlineHelpText>Maximum number of resources to be displayed. Set this value no higher than 500.</inlineHelpText>
        <label>Maximum Resources</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Number_of_Allowed_Push_Pins_on_Map__c</fullName>
        <defaultValue>5</defaultValue>
        <description>Maximum number of push pins to be displayed on the map when you click Show Results on Map. Multiple push pins that share the same location are combined and displayed in one push pin. The default value is 5.</description>
        <inlineHelpText>Maximum number of push pins to be displayed on the map when you click Show Results on Map. Multiple push pins that share the same location are combined and displayed in one push pin. The default value is 5.</inlineHelpText>
        <label>Number of Allowed Push Pins on Map</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Page_Size__c</fullName>
        <defaultValue>5</defaultValue>
        <description>Maximum number of records to display on a single page of search results in Search Resources. The default value is 5.</description>
        <inlineHelpText>Maximum number of records to display on a single page of search results in Search Resources. The default value is 5.</inlineHelpText>
        <label>Page Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Show_Latitude_Longitude_Fields__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When true, latitude and longitude fields are shown when Search Resources is launched from the sidebar link or all tabs. The default value is false.</description>
        <inlineHelpText>When true, latitude and longitude fields are shown when Search Resources is launched from the sidebar link or all tabs. The default value is false.</inlineHelpText>
        <label>Show Latitude Longitude Fields</label>
        <type>Checkbox</type>
    </fields>
    <label>Search Resources Personal</label>
</CustomObject>